Add fix Java 8 Path.of issue